# Copyright (c) 2010-2017 Caltech. All rights reserved.
# Joseph Schaeffer (schaeffer@dna.caltech.edu)
# Frits Dannenberg (fdann@dna.caltech.edu)

# package ======================================================================

[metadata]
name = multistrand
version = 2.2
author = The Multistrand Team
author_email = help@multistrand.org
description = Multistrand nucleic acid kinetic simulator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = RNA DNA chemical kinetics CTMC MJP Gillespie kinetic Monte Carlo simulator
license = MIT
url = http://www.multistrand.org
project_urls =
    Documentation = http://www.multistrand.org
    Source Code = https://github.com/DNA-and-Natural-Algorithms-Group/multistrand
    Issue Tracker = https://github.com/DNA-and-Natural-Algorithms-Group/multistrand/issues
platforms = all
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

[options]
install_requires =
    numpy >= 1.24
    scipy >= 1.10
python_requires = >=3.8
packages = multistrand, multistrand._options, multistrand._objects, nupack
package_dir =
    multistrand = src/interface
include_package_data = true
zip_safe = false

[options.extras_require]
mfpt =
    scikit-umfpack >=0.3
docs =
    sphinx >= 7.0
tutorials =
    matplotlib
testing =
    tox >= 4.3
    flake8 >= 6.0
    pylint >= 2.17
    pytest >= 7.3
    pytest-xdist >= 3.3

# test tools ===================================================================

[flake8]
extend-exclude =
    .git, .tox, build, doc/source/conf.py
extend-ignore =
    E121, E123, E126, E226, E24, E704, E731, F401, F403, F405, F812, F841, W503
per-file-ignores =
    */__init__.py:UnusedImport

[tool:pytest]
testpaths =
    test
python_files =
    test_*.py Test*.py
xfail_strict = true
addopts =
    -r a -n auto

# test suite ===================================================================

[tox:tox]
minversion = 4.3
requires =
    setuptools >= 65
isolated_build = false
usedevelop = false
envlist =
    style
    lint
    test
    docs

[testenv]
extras =
    testing
sitepackages = true
changedir = {toxinidir}
setenv =
    PYTHONPATH = {toxinidir}/src
allowlist_externals =
    flake8
    pylint
    pytest
    sphinx-build

[testenv:style]
skipsdist = true
commands =
    flake8

[testenv:lint]
skipsdist = true
commands =
    pylint src nupack test

[testenv:test]
commands =
    pytest

[testenv:docs]
extras =
    docs
commands =
    sphinx-build -j 8 -W -b html -d {envtmpdir}/doctrees doc/source {envtmpdir}/html
