# Multistrand nucleic acid kinetic simulator
# Copyright (c) 2008-2023 California Institute of Technology. All rights reserved.
# The Multistrand Team (help@multistrand.org)

# package ======================================================================

[metadata]
name = multistrand
version = 2.2
author = The Multistrand Team
author_email = help@multistrand.org
maintainer = Jake Kaslewicz, Boyan Beronov
maintainer_email = kasle001@umn.edu, beronov@cs.ubc.ca
description = Multistrand nucleic acid kinetic simulator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = RNA DNA chemical kinetics CTMC MJP Gillespie kinetic Monte Carlo simulator
url = http://www.multistrand.org
project_urls =
    Documentation = http://www.multistrand.org
    Source Code = https://github.com/DNA-and-Natural-Algorithms-Group/multistrand
    Issue Tracker = https://github.com/DNA-and-Natural-Algorithms-Group/multistrand/issues
platforms = all
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

[options]
install_requires =
    nupack >= 4.0.1
    numpy >= 1.24
    scipy >= 1.10
    multiprocess >= 0.70.15
python_requires = >=3.8
packages = multistrand, multistrand._options, multistrand._objects, multistrand.utils
package_dir =
    multistrand = src/interface
include_package_data = true
zip_safe = false

[options.extras_require]
mfpt =
    scikit-umfpack >=0.3
docs =
    sphinx >= 7.0
tutorials =
    matplotlib
testing =
    tox >= 4.3
    flake8 >= 6.0
    pylint >= 2.17
    pytest >= 7.3
    pytest-xdist >= 3.3

# test tools ===================================================================

[flake8]
extend-exclude =
    .git, .tox, build, doc/source/conf.py
extend-ignore =
    E121, E123, E126, E226, E24, E704, E731, F401, F403, F405, F812, F841, W503
per-file-ignores =
    */__init__.py:UnusedImport

[tool:pytest]
testpaths =
    test
python_files =
    test_*.py Test*.py
xfail_strict = true
addopts =
    -v -r a -n auto --dist worksteal

# test suite ===================================================================

[tox:tox]
minversion = 4.3
requires =
    setuptools >= 65
isolated_build = false
usedevelop = false
envlist =
    style
    lint
    test
    docs

[testenv]
extras =
    testing
sitepackages = true
changedir = {toxinidir}
setenv =
    PYTHONPATH = {toxinidir}/src
allowlist_externals =
    flake8
    pylint
    pytest
    sphinx-build

[testenv:style]
skipsdist = true
commands =
    flake8

[testenv:lint]
skipsdist = true
commands =
    pylint src test

[testenv:test]
commands =
    pytest

[testenv:docs]
extras =
    docs
commands =
    sphinx-build -j 8 -W -b html -d {envtmpdir}/doctrees doc/source {envtmpdir}/html
